5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1756_672.log
== TEST (2019-05-22 14:40:12) 
-- CODE:
from numpy import *

num = int(input(numero inteiro: ")
v1 = ones(num, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    num = int(input(numero inteiro: ")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:54) 
-- CODE:
from numpy import *

num = int(input(Numero inteiro: "))
v1 = ones(num, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    num = int(input(Numero inteiro: "))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:31) 
-- CODE:
from numpy import *

num = int(input("Numero inteiro: "))
v1 = ones(num, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:41:42) 
-- CODE:
from numpy import *

num = int(input("Numero inteiro: "))
v1 = ones(num, dtype=int)
print(v1)
-- EXECUTION TIME:
0.395165
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
